refactors the js and css

--- a/checkout.html
+++ b/checkout.html
@@ -30,226 +30,9 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/checkout.css" rel="stylesheet">
 
-    <style>
-        .checkout-page-section {
-            padding: 60px 0;
-            background-color: var(--background-color);
-        }
 
-        .checkout-form-container {
-            background-color: var(--surface-color);
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-            border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
-        }
-
-        .order-summary-container {
-            background-color: color-mix(in srgb, var(--background-color), var(--accent-color) 5%);
-            /* Light accent background */
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-            border: 1px solid color-mix(in srgb, var(--accent-color), transparent 80%);
-            /* Enable flexbox for reordering children */
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            /* Important for `mt-auto` to work */
-        }
-
-        /* Styling for the payment method images */
-        .payment-methods img {
-            height: 30px;
-            /* Adjust as needed */
-            vertical-align: middle;
-            margin-left: 10px;
-        }
-
-        .checkout-form-container h3,
-        .order-summary-container h3 {
-            font-family: var(--heading-font);
-            color: var(--heading-color);
-            font-size: 2rem;
-            /* Slightly larger for headings */
-            margin-bottom: 25px;
-            border-bottom: 2px solid color-mix(in srgb, var(--accent-color), transparent 70%);
-            padding-bottom: 10px;
-        }
-
-        .form-label {
-            font-family: var(--default-font);
-            font-weight: 500;
-            color: var(--default-color);
-            font-size: 1.05rem;
-        }
-
-        .form-control,
-        .form-select,
-        .form-check-input {
-            border-color: color-mix(in srgb, var(--default-color), transparent 70%);
-            padding: 10px 15px;
-            font-size: 1rem;
-        }
-
-        .form-control:focus,
-        .form-select:focus,
-        .form-check-input:focus {
-            border-color: var(--accent-color);
-            box-shadow: 0 0 0 0.25rem color-mix(in srgb, var(--accent-color), transparent 70%);
-        }
-
-        .order-table th,
-        .order-table td {
-            padding: 12px 5px;
-            /* Adjusted padding */
-            border-bottom: 1px dashed color-mix(in srgb, var(--default-color), transparent 90%);
-            font-family: var(--default-font);
-            color: var(--default-color);
-            font-size: 1rem;
-        }
-
-        .order-table th {
-            font-weight: 600;
-            color: var(--heading-color);
-        }
-
-        .order-table tfoot th,
-        .order-table tfoot td {
-            border-top: 2px solid color-mix(in srgb, var(--accent-color), transparent 50%);
-            font-size: 1.1rem;
-            font-weight: 700;
-            color: var(--heading-color);
-        }
-
-        .order-table tfoot td {
-            color: var(--accent-color);
-        }
-
-        .order-table .product-total {
-            text-align: right;
-        }
-
-        .order-table .product-name {
-            font-weight: 500;
-        }
-
-        .payment-methods label {
-            font-weight: 500;
-            color: var(--heading-color);
-            font-size: 1.1rem;
-            margin-bottom: 10px;
-            display: block;
-        }
-
-        .payment-option {
-            background-color: var(--surface-color);
-            border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            cursor: pointer;
-            transition: all 0.2s ease-in-out;
-        }
-
-        .payment-option:hover {
-            border-color: var(--accent-color);
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .payment-option input[type="radio"] {
-            margin-right: 10px;
-            accent-color: var(--accent-color);
-            /* The actual radio button color */
-            transform: scale(1.2);
-            /* Slightly larger radio button */
-        }
-
-        .payment-option.selected {
-            border-color: var(--accent-color);
-            box-shadow: 0 0 8px color-mix(in srgb, var(--accent-color), transparent 70%);
-            background-color: color-mix(in srgb, var(--accent-color), transparent 95%);
-        }
-
-        .btn-place-order {
-            background-color: var(--accent-color);
-            border-color: var(--accent-color);
-            color: var(--contrast-color);
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            font-weight: 600;
-            border-radius: 50px;
-            transition: all 0.3s ease;
-            width: 100%;
-        }
-
-        .btn-place-order:hover {
-            background-color: color-mix(in srgb, var(--accent-color), black 10%);
-            border-color: color-mix(in srgb, var(--accent-color), black 10%);
-        }
-
-        .form-check-label a {
-            color: var(--accent-color);
-            text-decoration: underline;
-        }
-
-        .form-check-label a:hover {
-            color: color-mix(in srgb, var(--accent-color), black 10%);
-        }
-
-        /* Style for the remove button */
-        .btn-danger-custom {
-            background-color: #dc3545;
-            /* Bootstrap red for danger */
-            border-color: #dc3545;
-            color: #fff;
-            padding: 5px 10px;
-            font-size: 0.85rem;
-            border-radius: 5px;
-            transition: background-color 0.2s ease, border-color 0.2s ease;
-        }
-
-        .btn-danger-custom:hover {
-            background-color: #c82333;
-            /* Darker red on hover */
-            border-color: #bd2130;
-            color: #fff;
-        }
-
-        .order-table th:last-child,
-        .order-table td:last-child {
-            padding-right: 5px;
-            /* Adjust right padding for the last column */
-        }
-
-        /* Added for AJAX feedback */
-        .order-feedback {
-            margin-top: 15px;
-            padding: 10px;
-            border-radius: 5px;
-            display: none;
-            /* Hidden by default */
-        }
-
-        .order-feedback.success {
-            background-color: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
-        }
-
-        .order-feedback.error {
-            background-color: #f8d7da;
-            color: #721c24;
-            border: 1px solid #f5c6cb;
-        }
-
-        .order-feedback.info {
-            background-color: #d1ecf1;
-            color: #0c5460;
-            border: 1px solid #bee5eb;
-        }
-    </style>
 </head>
 
 <body class="checkout-page">
@@ -503,189 +286,9 @@
 
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/checkout.js"></script>
 
-    <script>
-        // JavaScript for payment method selection visual effect
-        document.addEventListener('DOMContentLoaded', function () {
-            document.querySelectorAll('.payment-option').forEach(option => {
-                option.addEventListener('click', function () {
-                    document.querySelectorAll('.payment-option').forEach(opt => opt.classList.remove('selected'));
-                    this.classList.add('selected');
-                    this.querySelector('input[type="radio"]').checked = true;
-                });
-            });
 
-            const orderSuccessModal = new bootstrap.Modal(document.getElementById('orderSuccessModal'), {
-                backdrop: 'static',
-                keyboard: false
-            });
-
-            // Make these functions global or attach them to a global object if main.js needs to call them
-            window.saveCheckoutFormData = () => {
-                const form = $('#checkoutForm');
-                if (!form.length) return;
-                const formData = {};
-                form.find('input, select, textarea').each(function () {
-                    formData[this.id] = $(this).is(':checkbox') ? $(this).prop('checked') : $(this).val();
-                });
-                sessionStorage.setItem('checkoutFormData', JSON.stringify(formData));
-                console.log("Checkout form data saved to sessionStorage.");
-            };
-
-            window.loadCheckoutFormData = () => {
-                const form = $('#checkoutForm');
-                if (!form.length) return;
-                const savedData = JSON.parse(sessionStorage.getItem('checkoutFormData'));
-                if (!savedData) return;
-                form.find('input, select, textarea').each(function () {
-                    if (savedData[this.id] !== undefined) {
-                        $(this).is(':checkbox') ? $(this).prop('checked', savedData[this.id]) : $(this).val(savedData[this.id]);
-                    }
-                });
-                console.log("Checkout form data loaded from sessionStorage.");
-            };
-
-            // This function is now exposed globally for main.js to call if the page class matches
-            window.initializeCheckoutPage = (shippingFlatRate) => {
-                const cart = window.getCart();
-                const orderItemsBody = $('#order-summary-items');
-                const orderTotalsFooter = $('#order-summary-totals');
-                if (!orderItemsBody.length || !orderTotalsFooter.length) return;
-
-                orderItemsBody.empty(); // Clear existing items
-                let subtotal = 0;
-                const shipping = shippingFlatRate; // Use the value passed from main.js
-
-                if (cart.length === 0) {
-                    orderItemsBody.html('<tr><td colspan="4" class="text-center py-4">Your cart is empty. <a href="menu.html">Shop now!</a></td></tr>');
-                } else {
-                    cart.forEach(item => {
-                        const itemTotal = item.unitPrice * item.quantity;
-                        subtotal += itemTotal;
-                        orderItemsBody.append(`
-                            <tr>
-                                <td class="product-name">${item.name} (${item.packagingOption})</td>
-                                <td class="text-center">${item.quantity}</td>
-                                <td class="product-total">RM ${itemTotal.toFixed(2)}</td>
-                                <td class="text-end">
-                                    <button type="button" class="btn btn-sm btn-danger-custom remove-item-btn" data-item-id="${item.id}">Remove</button>
-                                </td>
-                            </tr>
-                        `);
-                    });
-
-                    // Add event listeners for the remove buttons after they are added to the DOM
-                    $('.remove-item-btn').on('click', function () {
-                        const itemId = $(this).data('itemId');
-                        window.deleteCartItem(itemId); // Global function in main.js
-                    });
-                }
-
-                const total = subtotal + shipping;
-                orderTotalsFooter.html(`
-                    <tr><th colspan="3">Subtotal</th><td class="text-end">RM ${subtotal.toFixed(2)}</td></tr>
-                    <tr><th colspan="3">Shipping</th><td class="text-end">RM ${shipping.toFixed(2)}</td></tr>
-                    <tr><th colspan="3">Total</th><td class="text-end"><strong>RM ${total.toFixed(2)}</strong></td></tr>
-                `);
-
-                window.loadCheckoutFormData();
-                $('#checkoutForm').find('input, select, textarea').off('change input').on('change input', window.saveCheckoutFormData);
-            };
-
-            // Call initial population when the page is ready and main.js has loaded shared components.
-            // main.js will now call window.initializeCheckoutPage() after loading dynamic content.
-
-            $('#placeOrderBtn').on('click', function (e) {
-                e.preventDefault();
-
-                const $placeOrderBtn = $(this);
-                const $orderFeedback = $('#orderFeedback');
-                const $checkoutForm = $('#checkoutForm');
-                const $termsCheckbox = $('#termsAndConditions');
-                const cartItems = window.getCart(); // Global function from main.js
-
-                // Form validation
-                if (!$checkoutForm[0].checkValidity()) {
-                    $checkoutForm[0].reportValidity();
-                    $orderFeedback.removeClass().addClass('order-feedback error').text('Please fill in all required billing and delivery details.').fadeIn();
-                    return;
-                }
-                if (!$termsCheckbox.prop('checked')) {
-                    $orderFeedback.removeClass().addClass('order-feedback error').text('You must agree to the Terms and Conditions to place an order.').fadeIn();
-                    return;
-                }
-
-                if (cartItems.length == 0) {
-                    $orderFeedback.removeClass().addClass('order-feedback error').text('Please add something to cart before you checkout!').fadeIn();
-                    return;
-                }
-
-                // Gather billing/delivery data
-                const billingDetails = {};
-                $checkoutForm.find('input, select, textarea').each(function () {
-                    const $field = $(this);
-                    billingDetails[$field.attr('id')] = $field.is(':checkbox') ? $field.prop('checked') : $field.val();
-                });
-
-                // Gather payment and cart data
-                const paymentMethod = $('input[name="paymentMethod"]:checked').val();
-
-                // Calculate totals (re-calculated to be self-contained)
-                let subtotal = 0;
-                cartItems.forEach(item => {
-                    subtotal += item.unitPrice * item.quantity;
-                });
-                const shippingCost = 10.00; // Hardcoded here for page-specific logic, but derived from main.js constant for clarity
-                const totalAmount = subtotal + shippingCost;
-
-                const orderData = {
-                    billingDetails: billingDetails,
-                    paymentMethod: paymentMethod,
-                    cartItems: cartItems,
-                    orderSummary: {
-                        subtotal: subtotal.toFixed(2),
-                        shipping: shippingCost.toFixed(2),
-                        total: totalAmount.toFixed(2)
-                    },
-                    orderDate: new Date().toISOString()
-                };
-
-                // Disable button and show loading feedback
-                $placeOrderBtn.prop('disabled', true).text('Placing Order...');
-                $orderFeedback.removeClass().addClass('order-feedback info').text('Processing your order...').fadeIn();
-
-                const mockAPIurl = 'https://68ac62797a0bbe92cbba425d.mockapi.io/placed-order';
-
-                $.post(mockAPIurl, orderData, function (response) {
-                    console.log('Order placed successfully (simulated via $.post):', response);
-
-                    $orderFeedback.removeClass().addClass('order-feedback success').text('Order successfully processed!').fadeIn();
-
-                    window.saveCart([]); // Global function from main.js (clears the cart)
-                    sessionStorage.removeItem('checkoutFormData'); // Clear billing/delivery details
-
-                    orderSuccessModal.show(); // Show success modal
-
-                    setTimeout(() => {
-                        window.location.href = 'index.html'; // Redirect
-                    }, 3000);
-
-                }, 'json')
-                    .fail(function (xhr, status, error) {
-                        console.error('Error placing order ($.post):', status, error, xhr.responseText);
-                        let errorMessage = 'Failed to place order. Please try again.';
-                        try {
-                            const errorResponse = JSON.parse(xhr.responseText);
-                            errorMessage = errorResponse.message || errorMessage;
-                        } catch (e) {
-                            // ignore parsing error
-                        }
-                        $orderFeedback.removeClass().addClass('order-feedback error').text(errorMessage).fadeIn();
-                        $placeOrderBtn.prop('disabled', false).text('Place Order');
-                    });
-            });
-        });
-    </script>
 
 </body>
 
