--- a/contact.html
+++ b/contact.html
@@ -30,137 +30,10 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/contact.css" rel="stylesheet">
 
-    <style>
-        /* Custom styles for location tabs */
-        .location-tabs .nav-link {
-            text-transform: uppercase;
-            font-weight: 600;
-            padding: 15px 20px;
-            margin-bottom: 10px;
-            white-space: nowrap;
-            /* Prevent wrapping of tab text */
-            border: 1px solid color-mix(in srgb, var(--default-color), transparent 80%);
-            /* Added border for tabs */
-            border-radius: 5px;
-            /* Slightly rounded corners */
-            margin-right: 5px;
-            /* Space between tabs */
-        }
 
-        .location-tabs .nav-link.active {
-            background-color: var(--accent-color);
-            color: var(--contrast-color);
-            border-color: var(--accent-color);
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            /* Subtle shadow for active tab */
-        }
 
-        .location-tabs .nav-link:hover {
-            color: var(--accent-color);
-            border-color: var(--accent-color);
-            background-color: color-mix(in srgb, var(--accent-color), transparent 95%);
-            /* Light background on hover */
-        }
-
-        .location-tabs .nav-item {
-            flex-grow: 1;
-            text-align: center;
-        }
-
-        @media (min-width: 768px) {
-            .location-tabs .nav-item {
-                flex-grow: 0;
-            }
-        }
-
-        @media (max-width: 767px) {
-            .location-tabs .nav-item {
-                flex-basis: 100%;
-                /* Tabs stack on small screens */
-                margin-right: 0;
-                margin-bottom: 8px;
-            }
-        }
-
-        /* New styles for location cards (replacing accordions) */
-        .location-card {
-            background-color: var(--surface-color);
-            border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
-            border-radius: 8px;
-            padding: 20px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            transition: all 0.3s ease-in-out;
-            height: 100%;
-            /* Ensure cards in a row have equal height */
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .location-card:hover {
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transform: translateY(-3px);
-        }
-
-        .location-card h4 {
-            font-size: 1.3rem;
-            /* Bigger font for location name */
-            font-weight: 700;
-            margin-bottom: 8px;
-            font-family: var(--default-font);
-            /* Use default font for consistency */
-        }
-
-        .location-card h4 a {
-            color: var(--heading-color);
-            /* Darker color for link */
-            text-decoration: none;
-            /* No underline by default */
-        }
-
-        .location-card h4 a:hover {
-            color: var(--accent-color);
-            /* Accent color on hover */
-            text-decoration: underline;
-            /* Underline on hover */
-        }
-
-        .location-card p {
-            font-size: 1rem;
-            /* Slightly bigger font for address */
-            color: color-mix(in srgb, var(--default-color), transparent 30%);
-            margin-bottom: 0;
-        }
-
-        /* Remove old accordion styles */
-        .accordion-item,
-        .accordion-button,
-        .accordion-body {
-            /* These styles are no longer needed for the new structure */
-            border: none !important;
-            background-color: transparent !important;
-            box-shadow: none !important;
-            color: inherit !important;
-            padding: 0 !important;
-        }
-
-        .accordion-button:not(.collapsed) {
-            color: inherit !important;
-            background-color: transparent !important;
-            box-shadow: none !important;
-        }
-
-        .accordion-header {
-            margin-bottom: 0 !important;
-        }
-
-        .accordion .row .col-lg-6 {
-            margin-bottom: 0 !important;
-        }
-
-        /* Reset margin from previous structure */
-    </style>
 </head>
 
 <body class="contact-page">
