refactors the js and css - v2

--- a/about.html
+++ b/about.html
@@ -30,134 +30,9 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
-
-    <!-- Page-Specific Styles for Enhanced Design -->
-    <style>
-        /* Immersive "Why Choose Us" Section */
-        .why-us-immersive {
-            position: relative;
-            padding: 80px 0;
-            color: #fff;
-            /* White text for contrast */
-        }
-
-        .faded-image {
-            max-width: 100%;
-            height: auto;
-            border-radius: 23px;
-            display: block;
-            margin: 0 auto;
-            /* center image */
-
-            -webkit-mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
-            -webkit-mask-repeat: no-repeat;
-            -webkit-mask-position: center;
-            -webkit-mask-size: contain;
-
-            mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
-            mask-repeat: no-repeat;
-            mask-position: center;
-            mask-size: contain;
-        }
+    <link href="assets/css/about.css" rel="stylesheet">
 
 
-        .why-us-bg {
-            position: absolute;
-            inset: 0;
-            background: url('assets/img/bg-about.png') center center no-repeat;
-            background-size: cover;
-            z-index: 1;
-        }
-
-        .why-us-bg::after {
-            content: '';
-            position: absolute;
-            inset: 0;
-            background-color: rgba(51, 47, 47, 0.9);
-            /* Dark Brown Overlay from your palette */
-            z-index: 2;
-        }
-
-        .why-us-immersive .container {
-            position: relative;
-            z-index: 3;
-        }
-
-        /* Override section title colors for this section */
-        .why-us-immersive .section-title h2 {
-            color: #fff;
-            font-size: 1.4rem;
-        }
-
-        .why-us-immersive .section-title p {
-            color: #fff;
-            font-size: 4.5rem;
-        }
-
-        .why-us-immersive .section-title p .description-title {
-            color: color-mix(in srgb, var(--accent-color), #fff 30%);
-            /* Lighter teal for contrast */
-            font-weight: bold;
-        }
-
-        .why-us-box {
-            padding: 30px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 8px;
-            text-align: center;
-            height: 100%;
-            transition: all 0.3s ease-in-out;
-        }
-
-        .why-us-box:hover {
-            background-color: rgba(255, 255, 255, 0.15);
-            transform: translateY(-5px);
-        }
-
-        .why-us-box i {
-            font-size: 4rem;
-            color: var(--accent-color);
-            margin-bottom: 20px;
-        }
-
-        .why-us-box h4 {
-            font-family: var(--default-font);
-            color: #fff;
-            font-weight: 600;
-            margin-bottom: 15px;
-        }
-
-        .why-us-box p {
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        /* Enhanced "Our Story" Section */
-        .story-intro {
-            max-width: 800px;
-            margin: 0 auto 60px auto;
-        }
-
-        .story-intro h3 {
-            font-family: var(--heading-font);
-            font-size: 2.6rem;
-            color: var(--heading-color);
-            line-height: 1.2;
-        }
-
-        .story-intro .highlight {
-            color: var(--accent-color);
-        }
-
-        .our-story .content-block {
-            padding: 20px;
-        }
-
-        .our-story .content-block img {
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-    </style>
 </head>
 
 <body class="about-page">
