--- a/ratings.html
+++ b/ratings.html
@@ -30,84 +30,9 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/ratings.css" rel="stylesheet">
 
-    <style>
-        .ratings-page-section {
-            padding: 60px 0;
-            background-color: var(--background-color);
-        }
 
-        .rating-form-container {
-            background-color: var(--surface-color);
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-            border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
-        }
-
-        .rating-form-container h3 {
-            font-family: var(--heading-font);
-            color: var(--heading-color);
-            font-size: 2rem;
-            margin-bottom: 25px;
-            border-bottom: 2px solid color-mix(in srgb, var(--accent-color), transparent 70%);
-            padding-bottom: 10px;
-        }
-
-        .star-rating {
-            font-size: 2.5rem;
-            color: #ddd;
-            /* Default grey stars */
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-
-        .star-rating .bi-star-fill {
-            color: #ffc107;
-            /* Gold for filled stars */
-        }
-
-        .star-rating span {
-            margin-right: 5px;
-        }
-
-        .form-label {
-            font-family: var(--default-font);
-            font-weight: 500;
-            color: var(--default-color);
-            font-size: 1.05rem;
-        }
-
-        .form-control,
-        .form-select {
-            border-color: color-mix(in srgb, var(--default-color), transparent 70%);
-            padding: 10px 15px;
-            font-size: 1rem;
-        }
-
-        .form-control:focus,
-        .form-select:focus {
-            border-color: var(--accent-color);
-            box-shadow: 0 0 0 0.25rem color-mix(in srgb, var(--accent-color), transparent 70%);
-        }
-
-        .btn-submit-review {
-            background-color: var(--accent-color);
-            border-color: var(--accent-color);
-            color: var(--contrast-color);
-            padding: 12px 25px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            border-radius: 50px;
-            transition: all 0.3s ease;
-            width: 100%;
-        }
-
-        .btn-submit-review:hover {
-            background-color: color-mix(in srgb, var(--accent-color), black 10%);
-            border-color: color-mix(in srgb, var(--accent-color), black 10%);
-        }
-    </style>
 </head>
 
 <body class="ratings-page">
