--- a/register.html
+++ b/register.html
@@ -30,91 +30,9 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/register.css" rel="stylesheet">
 
-    <style>
-        .register-page-section {
-            padding: 60px 0;
-            background-color: var(--background-color);
-        }
 
-        .register-form-container {
-            background-color: var(--surface-color);
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-            border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
-        }
-
-        .register-form-container h3 {
-            font-family: var(--heading-font);
-            color: var(--heading-color);
-            font-size: 2rem;
-            margin-bottom: 25px;
-            border-bottom: 2px solid color-mix(in srgb, var(--accent-color), transparent 70%);
-            padding-bottom: 10px;
-        }
-
-        .form-label {
-            font-family: var(--default-font);
-            font-weight: 500;
-            color: var(--default-color);
-            font-size: 1.05rem;
-        }
-
-        .form-control {
-            border-color: color-mix(in srgb, var(--default-color), transparent 70%);
-            padding: 10px 15px;
-            font-size: 1rem;
-        }
-
-        .form-control:focus {
-            border-color: var(--accent-color);
-            box-shadow: 0 0 0 0.25rem color-mix(in srgb, var(--accent-color), transparent 70%);
-        }
-
-        .btn-register {
-            background-color: var(--accent-color);
-            border-color: var(--accent-color);
-            color: var(--contrast-color);
-            padding: 12px 25px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            border-radius: 50px;
-            transition: all 0.3s ease;
-            width: 100%;
-        }
-
-        .btn-register:hover {
-            background-color: color-mix(in srgb, var(--accent-color), black 10%);
-            border-color: color-mix(in srgb, var(--accent-color), black 10%);
-        }
-
-        .register-form-container p {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .register-form-container p a {
-            color: var(--accent-color);
-            font-weight: 600;
-        }
-
-        /* Custom styling for Google Sign-In button to fit theme if using custom render */
-        .g_id_signin div[aria-labelledby^="gsi_42"] {
-            /* Target Google's rendered button specifically */
-            width: 100% !important;
-            /* Make Google button span full width of its container */
-            height: 48px;
-            /* Match btn-register height */
-            line-height: 48px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            border-radius: 50px;
-            /* Match btn-register border-radius */
-            /* You can further customize button appearance here if Google allows,
-               but direct overrides on its shadow DOM can be tricky. */
-        }
-    </style>
 </head>
 
 <body class="register-page">
